# OpsPilot

./: .dockerignore  .gitignore  Dockerfile  GITHUB_DESCRIPTION.txt  LICENSE  README.md  SPACE_README.md  START_DOCKER.bat  START_DOCKER.sh  deploy_hf.py  deploy_to_hf.sh  docker-compose.yml  inference.py  main.py  models.py  openenv.yaml  push_to_hf.py  pyproject.toml  requirements.txt  space_config.yaml  test_reset.py  upload_to_hf.py
agents/: __init__.py  ollama_agent.py  providers.py
baseline/: agent.py
env/: __init__.py  environment.py  state.py
graders/: __init__.py  coordination_grader.py  decision_grader.py  email_grader.py  final_grader.py  response_grader.py  scheduling_grader.py
report/: __init__.py  generator.py  pdf.py
server/: app.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
ui/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.jsx  index.css  store.js
ui/src/components/: Navbar.jsx  Sidebar.jsx  StatCard.jsx  TaskSelector.jsx
ui/src/hooks/: useRealtimeData.js
ui/src/pages/: Benchmark.jsx  Dashboard.jsx  Documentation.jsx  Leaderboard.jsx
